<resources>
    <string name="app_name">Covid19 Tracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="worldwide_label">Woldwide</string>
    <string name="total_cases_label">Total cases:</string>
    <string name="total_deaths_label">Deaths:</string>
    <string name="total_recovered_label">Recovered:</string>
    <string name="active_cases_label">Active:</string>
    <string name="critical_cases_label">Critical:</string>
    <string name="today_deaths_label">Today deaths:</string>
    <string name="today_cases_label">Today cases:</string>
</resources>
